// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <span
      class="sc-fKFyDc jHCVxA sc-iwyYcG gAkelF sc-fbNXWD xnzqE sc-GTWni VLWRW"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <span
      class="sc-fKFyDc jHCVxA sc-iwyYcG brBCdy sc-fbNXWD xnzqE sc-GTWni dbLoyB"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
